fix: prevent tag overflow while maintaining readability

--- a/app/javascript/stylesheets/components/_button.scss
+++ b/app/javascript/stylesheets/components/_button.scss
@@ -118,6 +118,7 @@ button, input[type="button"] {
   margin-bottom: 0.5em;
   font-size: 0.85em;
   font-weight: 600;
+  min-height: 37px;
 
   &.background-blue-light {
     border: 1px solid $dark-blue;
